<resources>
    <string name="app_name">FeedArticlesJetPack</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appName">FeedArticles</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register!</string>
    <string name="already_have_an_account_login">Already have an account? Login!</string>
    <string name="comfirmation_password">Comfirmation Password</string>
    <string name="log_off">Log off</string>
    <string name="show_favorite">Show Favorite</string>
    <string name="add_article">Add Article</string>
    <string name="please_register">Please Register</string>
    <string name="back">Back</string>
    <string name="article_title">Article Title</string>
    <string name="article_content">Article Content</string>
    <string name="image_url">Image URL</string>
    <string name="please_login">Please Login</string>
    <string name="edit_article">Edit Article</string>
    <string name="submit">Submit</string>
    <string name="sport">Sport</string>
    <string name="manga">Manga</string>
    <string name="various">Various</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="please_fill_all_fields_and_choose_a_category">Veuillez remplir tous les champs et sélectionner une catégorie.</string>
    <string name="created_at">Created at</string>
    <string name="connection_error_or_invalid_response">Connection error or invalid response.\n\n\n\n\n\n</string>
    <string name="please_fill_all_fields">Please fill in all the fields.</string>
    <string name="login_sucess">Login Successful.</string>
    <string name="login_sucess_token_wrong">Authentication successful but token unchanged.</string>
    <string name="unknow_user">Unknown user (invalid login/password).</string>
    <string name="parameter_issue">Parameter issue.</string>
    <string name="unknown_error_status">Erreur inconnue (status: %s).</string>
    <string name="passwords_dont_match">The passwords do not match.</string>
    <string name="error_connection">Connection Error</string>
    <string name="login_in_use">Login already in use.</string>
    <string name="registration_failed">Registration Failed.</string>
    <string name="registration_success">Registration Success</string>
    <string name="new_article">New Article</string>
    <string name="details_article">Details Article</string>
    <string name="all">All</string>
    <string name="article_added">Article Added.</string>
    <string name="add_article_failed">Article add Failed.</string>
    <string name="invalid_token_or_id">Token or ID is invalid, please login again.</string>
    <string name="please_fill_all_field_and_category">Please fill all fields and select a category.</string>
    <string name="invalid_token">Invalid token, please login again.</string>
    <string name="article_update">Article updated successfully.</string>
    <string name="updated_error">Error while updating the article.</string>
    <string name="article_deleted">Article Deleted.</string>
    <string name="error_delete">Error while deleting the article.</string>
</resources>