<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_add_article"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="124dp"
            android:clickable="true"
            android:contentDescription="@string/add_article"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_main_fav"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_input_add" />

        <ImageView
            android:id="@+id/btn_main_fav"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:clickable="true"
            android:contentDescription="@string/show_favorite"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_main_log_off"
            app:layout_constraintStart_toEndOf="@+id/iv_add_article"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/btn_star_big_off" />

        <ImageView
            android:id="@+id/iv_main_log_off"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="124dp"
            android:clickable="true"
            android:contentDescription="@string/log_off"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_main_fav"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_lock_power_off" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/radio_buttons_containers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radio_main_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="All"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/radio_main_sport"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/radio_main_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sport"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/radio_main_Manga"
            app:layout_constraintStart_toEndOf="@+id/radio_main_all" />

        <RadioButton
            android:id="@+id/radio_main_Manga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Manga"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/radio_main_various"
            app:layout_constraintStart_toEndOf="@+id/radio_main_sport" />

        <RadioButton
            android:id="@+id/radio_main_various"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Various"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/buttons_container"
        app:layout_constraintBottom_toTopOf="@+id/radio_buttons_containers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_adapter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
